[gd_scene load_steps=3 format=3 uid="uid://cbqci0t0g326u"]

[ext_resource type="Script" path="res://addons/resManager/sub_wins/script.gd" id="1_8vof7"]
[ext_resource type="PackedScene" uid="uid://c6htd5vrhkj3a" path="res://addons/resManager/parts/ItemGroups.tscn" id="2_6b7pk"]

[node name="Script" type="HSplitContainer"]
editor_description = "场景分组管理管理界面"
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/autohide = 0
script = ExtResource("1_8vof7")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemGroups" parent="VBox" instance=ExtResource("2_6b7pk")]
unique_name_in_owner = true
editor_description = "分组列表组件"
layout_mode = 2
size_flags_vertical = 3
filters = PackedStringArray("gd")

[node name="addSceneGroupBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "+ 添加分组"

[node name="VBox2" type="VSplitContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VBox2" type="VBoxContainer" parent="VBox2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBox2/VBox2"]
layout_mode = 2
text = "脚本内容"

[node name="codeTxt" type="CodeEdit" parent="VBox2/VBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
editable = false

[connection signal="drop_item_added" from="VBox/ItemGroups" to="." method="_on_item_groups_drop_item_added"]
[connection signal="item_clicked" from="VBox/ItemGroups" to="." method="_on_item_groups_item_clicked"]
[connection signal="item_dbl_click" from="VBox/ItemGroups" to="." method="_on_item_groups_item_dbl_click"]
[connection signal="items_deleted" from="VBox/ItemGroups" to="." method="_on_item_groups_items_deleted"]
[connection signal="removed_group" from="VBox/ItemGroups" to="." method="_on_item_groups_removed_group"]
[connection signal="title_renamed" from="VBox/ItemGroups" to="." method="_on_item_groups_title_renamed"]
[connection signal="pressed" from="VBox/addSceneGroupBtn" to="." method="_on_add_scene_group_btn_pressed"]
